--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Farmhash.Sharp"]
 	path = Farmhash.Sharp
 	url = https://github.com/nickbabcock/Farmhash.Sharp
+[submodule "linoodle"]
+	path = linoodle
+	url = https://github.com/PowerBall253/linoodle.git
